--- a/style.css
+++ b/style.css
@@ -118,7 +118,8 @@ ol.carousel-indicators li.active {
 
 .section2,
 .section3,
-.section4 {
+.section4,
+.section5 {
     padding: 0px 240px;
 }
 
@@ -222,3 +223,13 @@ text-align: center;
     padding: 50px 0px 40px;
 }
 
+/*  Section 5 ============================= */ 
+
+.section5 .fa {
+    color: #23b7a4;
+    margin: 1.5rem 0rem;
+}
+
+.section5 p + p {
+    color: #8d8f92;
+}
