--- a/style.css
+++ b/style.css
@@ -119,7 +119,8 @@ ol.carousel-indicators li.active {
 .section2,
 .section3,
 .section4,
-.section5 {
+.section5,
+.section6 {
     padding: 0px 240px;
 }
 
@@ -213,12 +214,14 @@ text-align: center;
 
 
 /*  Section 4 ============================= */ 
-.section4 {
+.section4,
+.section6 {
     background-color: #3a454d;
     color: white;
 }
 
-.section4 h3 {
+.section4 h3,
+.section6 h3 {
     margin: 0px;
     padding: 50px 0px 40px;
 }
